--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,27 @@
     box-sizing: border-box;
 }
 
+/*General styles*/
+body {
+    min-height: 100vh;
+    display:flex;
+    flex-direction: column;
+    color: #3a3a3a;
+}
+
 /* Header */
-header{
-    background-color: lightcoral
+header {
+    background-color: lightcoral;
 }
 
 /* Main content */
 main{
-    background-color: lightblue
-}
+   background-color: lightblue;
+   flex: 1 0 auto;
+ 
+    }
 
 /* Footer */
-footer{
-    background-color: orange
+footer {
+    background-color: orange;
 }
