--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,14 @@
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
-    margin:0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 /*General styles*/
 body {
     min-height: 100vh;
-    display:flex;
+    display: flex;
     flex-direction: column;
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
@@ -34,6 +34,7 @@ header a {
     text-decoration: none;
     color: inherit;
 }
+
 h1 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
@@ -47,13 +48,14 @@ h1 {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
 /* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
@@ -63,38 +65,50 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
-    top:100%;
+    top: 100%;
 
-    }
+}
 
-  /* Nav toggle */
-  #nav-toggle:checked~nav {
+/* Nav toggle */
+#nav-toggle:checked~nav {
     display: block;
-  }
+}
 
-  #nav-toggle {
+#nav-toggle {
     display: none;
-  }
+}
 
-  .nav-toggle-label {
+.nav-toggle-label {
     font-size: 2rem;
-  }
+}
 
-  /* Main content */
+/* Main content */
 main {
-   background-color: lightblue;
-   flex: 1 0 auto;
-   margin-top: 47px;
- 
-    }
+    background-color: lightblue;
+    flex: 1 0 auto;
+    margin-top: 47px;
+
+}
 
 /* Footer */
-footer {
-    background-color: orange;
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
+
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -104,11 +118,11 @@ footer {
         padding-right: 1rem;
     }
 
-   #menu {
+    #menu {
         display: flex;
-    } 
+    }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
@@ -132,8 +146,8 @@ footer {
 /* Media query: laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
 
-#menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-}
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
 
 }
