--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,16 @@ body {
     display: flex;
     flex-direction: column;
     color: #3a3a3a;
-    font-family: 'Lato', sans-serif;
+   font-family: 'Lato', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
 /* Header */
@@ -35,12 +44,7 @@ header a {
     color: inherit;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
+
 
 #menu {
     letter-spacing: 4px;
@@ -48,7 +52,7 @@ h1 {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -84,7 +88,7 @@ nav {
 
 /* Main content */
 main {
-    
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 
@@ -92,10 +96,17 @@ main {
 
 /*Hero section*/
 #hero {
-    height:600px;
+    height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover
 }
+
+#cover-text {
+    /*Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+}
+
 
 /* Footer */
 #social-networks {
@@ -104,13 +115,15 @@ main {
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-} 
+}
 
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #3a3a3a; 
+    color: #3a3a3a;
 }
+
+
 
 
 /* Media query: tablets and larger (768px and up) */
