--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -24,6 +24,7 @@ h3 {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
+    
 }
 
 /* Header */
@@ -99,18 +100,30 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
     
    
 }
+
 
  /*Final rgba value sets the opacity so it is semi-transparent */
 
  #cover-text {
     font-size: 130%!important;
         background-color: rgba(241, 109, 107, .7)!important;
+        position: absolute;
+        bottom: 30px;
+        width: 80%;
+        min-height: 200px;
+        padding-top: 40px
+        padding-left: 10px;
 
 }
 
+#cover-text > h2, #cover-text > h3 {
+       color: #ffffff
+
+}
 
 
 /* Footer */
@@ -165,6 +178,12 @@ main {
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
+
+        /* Hero */
+        #cover-text {
+                width: 300px;
+                right: 50px
+        }
     }
 }
 
