--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -175,6 +175,22 @@ hr {
     flex-wrap: wrap;
 }
 
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /*This will not wrap on screens less that 400px wide. Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    border: 2px solid white;
+}
+
+#times h3 {
+    /*Override the heading colour set in general styles */
+    color: #fafafa;
+}
+
 
 /* Footer */
 #social-networks {
