Make img columns number responsive to different screen sizes

--- a/assets/css/style4.css
+++ b/assets/css/style4.css
@@ -28,7 +28,7 @@ h3 {
 }
 
 .hidden-heading {
-    display:none;
+    display: none;
 }
 
 /* Header */
@@ -195,6 +195,15 @@ hr {
     color: #fafafa;
 }
 
+/* Gallery page */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
 
 /* Footer */
 #social-networks {
@@ -209,6 +218,15 @@ hr {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -272,6 +290,11 @@ hr {
         align-self: flex-end;
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 3
+    }
+
 }
 
 /* Media query: laptops and larger (992px and up) */
@@ -280,6 +303,11 @@ hr {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
+     /* Gallery */
+     #photos {
+        column-count: 4
+     }
 }
 
 @media screen and (min-width: 1200px) {
